<resources>
    <string name="app_name">湖工课程表</string>
    <string name="mon">周一</string>
    <string name="tues">周二</string>
    <string name="wed">周三</string>
    <string name="thur">周四</string>
    <string name="fri">周五</string>
    <string name="sat">周六</string>
    <string name="sun">周日</string>

    <string name="wait">同步课表中，请等待</string>

    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="no_courses">今天没有课呢</string>

    <string name="setting">设置</string>
    <string name="ui">UI相关</string>
    <string name="ui_dark_theme">使用深色主题</string>
    <string name="ui_not_current_course">不显示非本周的课程</string>
    <string name="ui_text_size">课表字体大小</string>
    <string name="widget">桌面小部件</string>
    <string name="widget_status">小部件右侧显示课程状态</string>
    <string name="widget_jump">点击桌面小部件打开app</string>
    <string name="widget_refresh">点击桌面小部件刷新数据</string>
    <string name="widget_date">小部件不显示周数和星期</string>
    <string name="sync">同步设置</string>
    <string name="sync_from_server">从备份服务器同步课表</string>
    <string name="app">其它功能</string>
    <string name="app_remind">开启上课提醒</string>
    <string name="app_update">自动检查更新</string>
    <string name="about">关于湖工课程表</string>

    <string name="add_course">添加课程</string>
    <string name="ok">确定</string>
    <string name="back">返回</string>
    <string name="info">课程详情</string>
    <string name="chooseJc">选择节次</string>
    <string name="chooseWeek">选择周次</string>
    <string name="setCurrentWeek">设置当前周</string>
    <string name="time_range">时间段</string>
    <string name="courseName">课程名称</string>
    <string name="courseTeacher">课程老师</string>
    <string name="coursePlace">上课地点</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>

    <string name="emmm">注意：小部件的快速更新依赖于后台服务，这个后台理论上不会增加电量的消耗，所以需要手动将app加入系统应用白名单（或者在最近任务面板里锁住后台）以保证后台不会被系统回收，点击上面的显示课程状态开关将会跳转到白名单设置界面，如果没有跳转到白名单界面请自行搜索添加白名单的方法，如果你不需要小部件显示课程状态可以忽略这一点</string>

    <string name="header">header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
