<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="cn.edu.hnit.schedule.viewmodel.SettingListViewModel"/>
        <variable
            name="textColor"
            type="int" />
        <variable
            name="titleColor"
            type="int" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_ui"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:padding="8dp"
                android:text="@string/ui"
                android:textColor="@{titleColor}"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/ui_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="2dp"
                android:checked="@{vm.darkThemeOption}"
                android:onCheckedChanged="@{(cb, isChecked)->vm.setDarkThemeOption(isChecked)}"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/ui_dark_theme"
                android:textColor="@{textColor}"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/ui_not_current_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="2dp"
                android:checked="@{vm.notCurrentWeekOption}"
                android:onCheckedChanged="@{(cb, isChecked)->vm.setNotCurrentWeekOption(isChecked)}"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/ui_not_current_course"
                android:textColor="@{textColor}"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ui_text_size_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="5"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/ui_text_size"
                    android:textColor="@{textColor}"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@{vm.textSize}"
                    android:textColor="@{textColor}"
                    android:textSize="18sp" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seek_bar"
                style="@android:style/Widget.Material.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:max="10"
                android:progress="@{vm.textSizeOption}" />

            <TextView
                android:id="@+id/title_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:padding="8dp"
                android:text="@string/widget"
                android:textColor="@{titleColor}"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/widget_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="2dp"
                android:checked="@{vm.widgetStatusOption}"
                android:onCheckedChanged="@{(cb, isChecked)->vm.setWidgetStatusOption(isChecked)}"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/widget_status"
                android:textColor="@{textColor}"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/widget_jump"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="2dp"
                android:checked="@{vm.widgetJumpOption}"
                android:onCheckedChanged="@{(cb, isChecked)->vm.setWidgetJumpOption(isChecked)}"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/widget_jump"
                android:textColor="@{textColor}"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/widget_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="2dp"
                android:checked="@{vm.widgetDateOption}"
                android:onCheckedChanged="@{(cb, isChecked)->vm.setWidgetDateOption(isChecked)}"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/widget_date"
                android:textColor="@{textColor}"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/emmm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:paddingEnd="32dp"
                android:paddingBottom="8dp"
                android:text="@string/emmm"
                android:textColor="@{titleColor}"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/title_sync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:padding="8dp"
                android:text="@string/sync"
                android:textColor="@{titleColor}"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/sync_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="2dp"
                android:clickable="false"
                android:checked="@{vm.syncOption}"
                android:onCheckedChanged="@{(cb, isChecked)->vm.setSyncOption(isChecked)}"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/sync_from_server"
                android:textColor="#bbb"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/title_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:padding="8dp"
                android:text="@string/app"
                android:textColor="@{titleColor}"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/app_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="2dp"
                android:clickable="false"
                android:checked="@{vm.appUpdateOption}"
                android:onCheckedChanged="@{(cb, isChecked)->vm.setAppUpdateOption(isChecked)}"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/app_update"
                android:textColor="#bbb"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:foreground="?attr/selectableItemBackground"
                android:paddingStart="24dp"
                android:paddingTop="8dp"
                android:paddingEnd="24dp"
                android:paddingBottom="8dp"
                android:text="成绩查询"
                android:textSize="18sp"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>
    </ScrollView>

</layout>
