<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="backgroundColor"
            type="int" />
        <variable
            name="backgroundGray"
            type="int" />
        <variable
            name="textColor"
            type="int" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@{backgroundColor}"
        android:fitsSystemWindows="true"
        tools:context="cn.edu.hnit.schedule.ui.pages.add.AddCourseActivity">

        <android.support.v7.widget.CardView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="25dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/back"
                app:srcCompat="@drawable/ic_back" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/add_course"
            android:textColor="@{textColor}"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@{backgroundGray}"
            app:layout_constraintBottom_toTopOf="@+id/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@{backgroundColor}">

                <LinearLayout
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="#fafafa"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/place" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:ems="10"
                    android:autofillHints="@string/courseName"
                    android:hint="@string/courseName"
                    android:textColorHint="@{textColor}"
                    android:textColor="@{textColor}"
                    android:inputType="textPersonName"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img1"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UnusedAttribute" />

                <EditText
                    android:id="@+id/teacher"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:ems="10"
                    android:autofillHints="@string/courseTeacher"
                    android:hint="@string/courseTeacher"
                    android:textColorHint="@{textColor}"
                    android:textColor="@{textColor}"
                    android:inputType="textPersonName"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img2"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    tools:ignore="UnusedAttribute" />

                <EditText
                    android:id="@+id/place"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:ems="10"
                    android:autofillHints="@string/coursePlace"
                    android:hint="@string/coursePlace"
                    android:textColorHint="@{textColor}"
                    android:textColor="@{textColor}"
                    android:inputType="textPersonName"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img3"
                    app:layout_constraintTop_toBottomOf="@+id/teacher"
                    tools:ignore="UnusedAttribute" />

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/name"
                    app:srcCompat="@drawable/ic_course_name"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/teacher"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/teacher"
                    app:srcCompat="@drawable/ic_person"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/place"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/place"
                    app:srcCompat="@drawable/ic_place"
                    tools:ignore="ContentDescription" />

            </android.support.constraint.ConstraintLayout>
        </ScrollView>

        <TextView
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@{backgroundColor}"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/save"
            android:textColor="@{textColor}"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UnusedAttribute" />

    </android.support.constraint.ConstraintLayout>
</layout>
